# adaptive-extractor

./: .env.example  .gitignore  README.md  conda-lock.yml  environment.yml  optimize_logs.txt  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
app/: Home.py
app/pages/: Evaluation.py  Inference.py  Training_Studio.py
config/: core.yaml  default.yaml  default_fast.yaml  example.yaml  extraction.yaml  ingestion.yaml  optimization.yaml  student_gptoss.yaml
config/initial_instructions/: nanozymes_pilot.txt  nanozymes_sota.txt
config/systems/: example.yaml  pilot.yaml
config/tasks/: nanozymes.yaml
config/tasks/nanozymes/: initial_schema.yaml
data/: splits.json
data/agents/: agent_production_20260125.json  agent_scientific_20251222.json  agent_survival_20251222.json  default_20260127.json  manual_fewshot_20260127.json  manual_oneshot_a_20260127.json  manual_oneshot_b_20260127.json  manual_zeroshot_20260127.json  nanozymes_pilot.meta.json  scores_fewshot_sota.txt
data/ground_truth/: nanozymes.csv
data/parsed/test/: acs.analchem.7b02880.json  acsami.2c20878.json  acsomega.0c00147.json  adfm.202001933.json  am501830v.json  c4tb00968a.json  c5ra11014a.json  c6qm00149a.json  c8tb01132j.json  j.apsusc.2016.12.067.json  jacs.7b00601.json  (+9 more)
data/splits/: nanozymes_pilot.json
docs/: README.md  adding_tasks.md  api_usage.md  architecture.md  cli_reference.md  configuration.md  data_artifacts.md  dspy_mipro_threshold_patch.md  dspy_miprov2.md  dspy_miprov2_patches.md  extraction_module.md  gemini_parser.md  ingestion_module.md  miprov2.md  mlflow_integration.md  optimization_module.md  semantic_judge_technical_specification.md  troubleshooting.md
logs/: lint.txt  optimize_pilot.err  python12.txt
notebooks/: browse_itmos_ollama.ipynb  estimate_train_tokens.ipynb  evaluate_predictions.ipynb  results_viewer.ipynb  sample_nanozyme.ipynb  token_analysis.ipynb
scripts/: _bootstrap.py  benchmark.py  create_splits.py  download_data.py  extract.py  generate_manual_agent.py  ingest.py  optimize.py  parse.py  parse_uni-parser.py  patch_dspy_mipro_threshold.py  patch_dspy_mipro_zero_bootstrap.py  predict.py  predict_fewshot.py  slaunch_optimize_pilot.sh
src/ae/: __init__.py
src/aee/: __init__.py  llm.py
tests/: __init__.py  conftest.py
tests/data/: sample_gt.csv  sample_parsed.json  sample_splits.json
tests/e2e/: test_full_workflow.py
tests/integration/: test_extract_flow.py  test_gemini_parser_integration.py  test_generate_manual_flow.py  test_marker_parser_integration.py  test_optimize_flow.py  test_task_plugins.py
(+444 files in other folders)
