[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoevoextractor"
version = "0.2.0"
description = "Evolutionary self-optimizing system for scientific data extraction"
requires-python = ">=3.11"
dependencies = [
    "dspy-ai>=2.4.4",
    "pydantic>=2.7.1",
    "pandas",
    "streamlit"
]

[tool.setuptools.packages.find]
where = ["src"]