[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-extractor"
version = "0.4.0"
description = "Evolutionary self-optimizing system for scientific data extraction"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "dspy>=3.1.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "tabulate>=0.9.0",
    "requests>=2.28.0",
    "google-genai>=1.0.0",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
development = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "responses>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
tracking = [
    "mlflow>=2.10.0",
]
research = [
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
    "ipython>=8.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.0",
    "statsmodels>=0.14.0",
    "transformers>=4.35.0",
]

[project.scripts]
ae-parse = "ae.ingestion.cli:main"
ae-extract = "ae.extraction.cli:main"
ae-optimize = "ae.optimization.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["ae"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "dspy.*",
    "pandas.*",
    "scipy.*",
    "matplotlib.*",
    "mlflow.*",
    "yaml",
    "dotenv",
    "tabulate",
    "google.genai.*",
    "requests",
    "statsmodels.*",
    "sklearn.*",
    "umap",
]
ignore_missing_imports = true
